# orders-service

./: Dockerfile  Jenkinsfile  README.md  app.py  pyproject.toml
tests/: test_app.py
