[tool.poetry]
name = "projecttemplate-python2-api"
version = "0.1.0"
description = ""
authors = ["Nguyen Thanh Sang <sang211nt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
werkzeug = "^3.0.3"
requests = "2.19.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
